# cbig

./: CBIG - CodeBase Insight Generator.md  CBIG - CodeBase Insight Generator.md.tmp.html  LAUNCH_INSTRUCTIONS.txt  PROJECT_DIRECTIVE.md  README.md  cbig_aliases.sh  cbig_completion.zsh  main.py  main_code_p.md  pyproject.toml  repo_code_h.md  repo_code_p.md
.claude/: settings.local.json
commands/: CBIG_COMMANDS_PRD.md  EXAMPLES.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md
debug/1/: 1claudia.jsonl  uverror.txt
docs/: _Users_cjmacbook_dv_tools_code-extractor_cbig_src_cbig_cache_code_p.md  _Users_cjmacbook_dv_tools_code-extractor_cbig_src_cbig_cli_code_p.md  _Users_cjmacbook_dv_tools_code-extractor_cbig_src_cbig_code_x.md  _Users_cjmacbook_dv_tools_code-extractor_cbig_src_cbig_core_code_p.md  _Users_cjmacbook_dv_tools_code-extractor_cbig_src_cbig_formatters_code_p.md  _Users_cjmacbook_dv_tools_code-extractor_cbig_src_cbig_parsers_code_p.md
src/cbig/: __init__.py
src/cbig/cache/: __init__.py  manager.py
src/cbig/cli/: __init__.py  main.py
src/cbig/core/: __init__.py  language_detector.py  models.py  processor.py  walker.py
src/cbig/formatters/: __init__.py  markdown.py  structured.py
src/cbig/parsers/: __init__.py  base.py  generic_parser.py  html_parser.py  java_parser.py  javascript_parser.py  python_parser.py  registry.py  rust_parser.py
